<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:baselineAligned="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/AppName"
        style="@style/titleText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:src="@mipmap/sysu"
        android:id="@+id/imageView" />

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/horizon_margin5">

        <EditText
            android:id="@+id/username"
            style="@style/editStyle"
            android:hint="@string/u_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            style="@style/editStyle"
            android:hint="@string/p_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:id="@+id/uTitle"-->
    <!--style="@style/textStyle"-->
    <!--android:text="@string/username"-->
    <!--android:textStyle="bold" />-->

    <!--<EditText-->
    <!--style="@style/editStyle"-->
    <!--android:layout_alignBaseline="@+id/uTitle"-->
    <!--android:layout_toRightOf="@+id/uTitle"-->
    <!--android:hint="@string/u_hint"-->
    <!--android:inputType="textPersonName" />-->

    <!--<TextView-->
    <!--android:id="@+id/pTitle"-->
    <!--style="@style/textStyle"-->
    <!--android:layout_alignRight="@+id/uTitle"-->
    <!--android:layout_below="@+id/uTitle"-->
    <!--android:layout_marginBottom="@dimen/horizon_margin5"-->
    <!--android:layout_marginTop="@dimen/horizon_margin10"-->
    <!--android:text="@string/password"-->
    <!--android:textStyle="bold" />-->

    <!--<EditText-->
    <!--style="@style/editStyle"-->
    <!--android:layout_alignBaseline="@+id/pTitle"-->
    <!--android:layout_toRightOf="@+id/pTitle"-->
    <!--android:hint="@string/p_hint"-->
    <!--android:inputType="textPassword" />-->
    <!--</RelativeLayout>-->

    <RadioGroup
        android:id="@+id/orgnazation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/student"
            style="@style/textStyle"
            android:layout_marginRight="@dimen/horizon_margin10"
            android:checked="true"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/teacher"
            style="@style/textStyle"
            android:layout_marginRight="@dimen/horizon_margin10"
            android:text="@string/teacher" />

        <RadioButton
            android:id="@+id/league"
            style="@style/textStyle"
            android:layout_marginRight="@dimen/horizon_margin10"
            android:text="@string/league" />

        <RadioButton
            android:id="@+id/manager"
            style="@style/textStyle"
            android:text="@string/manager" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin">

        <Button
            android:id="@+id/login"
            style="@style/textStyle"
            android:layout_marginRight="@dimen/horizon_margin5"
            android:background="@drawable/corner"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/register"
            style="@style/textStyle"
            android:background="@drawable/corner"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>

